--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="/assets/css/style.css" rel="stylesheet">
+        <link href="assets/css/style.css" rel="stylesheet">
 
         <title>Hello, world!</title>
     </head>
