--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
                     return json;
                 })();
                 room = "5-5";
-                checkRoom(window.room)
+                checkRoom(window.room);
             };
 
-            loadmap('L1')
+            loadmap('L1');
 
             // x = 0
             // while (x != 4) {
