--- a/index.html
+++ b/index.html
@@ -155,12 +155,14 @@
                     case 1:
                         blink();
                         setTimeout(() => {
+                            canGo(window.room)
                             checkRoom(window.room);
                         }, 250);
                         break;
                     case 2:
                         blink();
                         setTimeout(() => {
+                            canGo(window.room)
                             checkRoom(window.room);
                         }, 500);
                         break;
