--- a/index.html
+++ b/index.html
@@ -23,13 +23,20 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Fade
+                                Fade
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><button class="dropdown-item active" onclick="$(this).parent().parent().find('.active').removeClass('active');$(this).addClass('active');fade=2;$('body').removeClass('tag1').addClass('tag2');">Default</button></li>
                                 <li><button class="dropdown-item" onclick="$(this).parent().parent().find('.active').removeClass('active');$(this).addClass('active');fade=1;$('body').addClass('tag1').removeClass('tag2');">Fast</button></li>
                                 <li><button class="dropdown-item" onclick="$(this).parent().parent().find('.active').removeClass('active');$(this).addClass('active');fade=0;$('body').removeClass('tag1').removeClass('tag2');">Off</button></li>
                             </ul>
+                            <a class="nav-link" href="#" role="button" onclick="
+                            $('body.black, .pixel').
+                            $('div, h2, button')
+                            $('')
+                            ">
+                                Dark Mode
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -125,6 +132,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
         <script src="assets/js/main.js"></script>
 
         <script>
@@ -193,6 +201,11 @@
             //         rooms[Object.keys(rooms)[selector]]['enemy'].push(names[Math.floor(Math.random() * 9)]);
             //     };
             // };
+
+            function addDarkmodeWidget() {
+                new Darkmode().showWidget();
+            };
+            window.addEventListener('load', addDarkmodeWidget);
         </script>
 
         <script>
