--- a/index.html
+++ b/index.html
@@ -200,10 +200,12 @@
             };
             window.addEventListener('load', addDarkmodeWidget);
 
-            $('.darkmode-toggle').click(function () {
-                $('.navbar-toggler').toggleClass('bg-white');
-                $('#navbarDropdown').toggleClass('text-white');
-                console.log('BOOP!')
+            $(function () {
+                $('.darkmode-toggle').click(function () {
+                    $('.navbar-toggler').toggleClass('bg-white');
+                    $('#navbarDropdown').toggleClass('text-white');
+                    console.log('BOOP!')
+                });
             });
         </script>
 
