--- a/index.html
+++ b/index.html
@@ -196,17 +196,18 @@
             // };
 
             function addDarkmodeWidget() {
-                new Darkmode().showWidget();
+                new Darkmode().showWidget()
+                    .then(
+                        $('.darkmode-toggle').click(function () {
+                            $('.navbar-toggler').toggleClass('bg-white');
+                            $('#navbarDropdown').toggleClass('text-white');
+                            console.log('BOOP!');
+                        })
+                    );
             };
             window.addEventListener('load', addDarkmodeWidget);
 
-            $(function () {
-                $('.darkmode-toggle').click(function () {
-                    $('.navbar-toggler').toggleClass('bg-white');
-                    $('#navbarDropdown').toggleClass('text-white');
-                    console.log('BOOP!')
-                });
-            });
+                
         </script>
 
         <script>
