--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                                 <li><button class="dropdown-item" onclick="$(this).parent().parent().find('.active').removeClass('active');$(this).addClass('active');fade=1;$('body').addClass('tag1').removeClass('tag2');">Fast</button></li>
                                 <li><button class="dropdown-item" onclick="$(this).parent().parent().find('.active').removeClass('active');$(this).addClass('active');fade=0;$('body').removeClass('tag1').removeClass('tag2');">Off</button></li>
                             </ul>
+                            <a class="nav-link darkmode-toggle">
+                                Dark Mode
+                            </a>
                         </li>
                     </ul>
                 </div>
