--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                                 <li><button class="dropdown-item" onclick="$(this).parent().parent().find('.active').removeClass('active');$(this).addClass('active');fade=1;$('body').addClass('tag1').removeClass('tag2');">Fast</button></li>
                                 <li><button class="dropdown-item" onclick="$(this).parent().parent().find('.active').removeClass('active');$(this).addClass('active');fade=0;$('body').removeClass('tag1').removeClass('tag2');">Off</button></li>
                             </ul>
+                            <label for="ColorInput">Background</label>
+                            <input type="color" class="form-control form-control-color" id="ColorInput" value="#FFFFFF" title="Choose your color" autocompleted="">
                         </li>
                     </ul>
                 </div>
@@ -196,7 +198,9 @@
         </script>
 
         <script>
-            
+            $('#ColorInput').change(function () {
+                $(this).val();
+            });
         </script>
     </body>
 </html>
