--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         <script>
             $('#ColorInput').change(function () {
-                $(this).val();
+                console.log($(this).val());
             });
         </script>
     </body>
