--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
         <script>
             $('#ColorInput').change(function () {
-                console.log($(this).val());
+                $('body').css('background-color', $(this).val());
             });
         </script>
     </body>
