--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
         <script src="assets/js/actions.js"></script>
 
         <script>
+            var armour;
+            var player;
+            var foes;
+            var weapons;
+            var rooms;
+
             function getData(url, cb) {
                 fetch(url)
                 .then(response => response.json())
